--- a/styles/results.css
+++ b/styles/results.css
@@ -112,6 +112,9 @@
 .oikea-puoli-sivusta{
     width: 67%; /* RESULTS SHOULD TAKE 2/3 of the width by default*/
     /* => INPUTS TAKE 1/3 by default */
+    position: sticky;
+    top: 0;
+    height: 100vh;
     
     display: flex;
     color: white;
@@ -120,7 +123,7 @@
 }
 
 .oikea-puoli-sivusta h1{
-    margin-top: 0; /* Remove default margin from header1s*/
+    margin: 0; /* Remove default margin from header1s*/
     font-size: clamp(1rem, 1.8vw, 1.5em);
     white-space: nowrap;  
 }
@@ -164,12 +167,10 @@
     margin-left: 5px;
 }
 
-
 /* Inputs and results wrap when screen not wide enough */
 @media screen and (max-width: 900px) {   
     .first-time-use{
         height: 100vh;
-        width: 100vh;
         z-index: 1000; /*Oikea-puoli-sivusta 999z-index, */
     }
     
@@ -187,9 +188,8 @@
         margin-bottom: 1.5rem;
         text-transform: uppercase;
     }
-    
-    .results-content {
-        display: flex;
+
+    .results-content {     
         flex-direction: row;
         flex-wrap: nowrap;
         width: 100%;
@@ -198,7 +198,7 @@
         scroll-snap-type: x mandatory;
         border-bottom-left-radius: 45px;
         border-bottom-right-radius: 45px;
-
+        box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.3);
     }
 
     .mobile-divider-line{
@@ -208,11 +208,12 @@
     }
 
     .swipe-dots{
-        position: absolute;
-        top: 10px;
+        /* position: absolute;
+        top: 10px; */
+        margin-top: auto;
+        align-self: center;
         align-items: center;
         display: flex;
-        justify-content: center;
         gap: 0.5rem;
         z-index: 10;
     }
@@ -231,23 +232,28 @@
 }
 
     .left-side, .middle, .right-side {
-        width: 100vw;
-        flex: none;
-        height: 50vh;
+        min-width: 100vw;
+        padding: 2vh 4vh 2vh 4vh; /* Slightly more on sides */
         display: flex;
         flex-direction: column;
         justify-content: center;
         /*align-items: center;*/
         scroll-snap-align: start;
+
+        /* min-height: 30vh; */ /* If too compact uncomment */
+        max-height: 50vh;
+        padding-bottom: 20px;
     }
 
     .oikea-puoli-sivusta {
         width: 100%;
         background-color: rgb(228, 228, 228);
         font-size: 1rem;
-        height: 50vh;
         display: flex;
         flex-wrap: wrap;
+
+        z-index: 999;
+        height: auto;
     }
 
     .oikea-puoli-sivusta h1 {
@@ -293,10 +299,6 @@
 
 }
 
-
-
-
-
 .header-wrapper{
     display: flex;
     justify-content:baseline;
@@ -306,6 +308,7 @@
 .results-tooltip-wrapper{
     display: flex;
     column-gap: 10px;
+    align-items: center;
 }
 
 .header-span{
